--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ffsadfawerasdfwertwwfrrrqerdefffaaa</title>
+	<title>Zengular</title>
 </head>
 <body>
 	<div is="my-brick"></div>
