--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>Zengular</title>
+	<style>
+		@import "css/style.css";
+	</style>
 </head>
 <body>
-<div is="my-brick"></div>
+<div is="todo-app"></div>
 <script src="js/app.js"></script>
 </body>
 </html>
